crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@er__all.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/er/all.mmd
---
{
  "kind": "graph",
  "direction": "right",
  "nodes": [
    {
      "id": "CUSTOMER",
      "shape": {
        "kind": "table",
        "attributes": [
          {
            "data_type": "string",
            "name": "id",
            "keys": [
              "PK"
            ]
          },
          {
            "data_type": "string",
            "name": "email",
            "keys": [
              "UK"
            ],
            "comment": "login"
          },
          {
            "data_type": "int",
            "name": "address_id",
            "keys": [
              "FK"
            ]
          },
          {
            "data_type": "string",
            "name": "code",
            "keys": [
              "PK",
              "FK"
            ]
          },
          {
            "data_type": "string",
            "name": "note",
            "comment": "free text"
          },
          {
            "data_type": "varchar(255)",
            "name": "title"
          },
          {
            "data_type": "string[]",
            "name": "tags"
          }
        ]
      },
      "label": [
        "CUSTOMER"
      ]
    },
    {
      "id": "ORDER",
      "shape": {
        "kind": "table",
        "attributes": []
      },
      "label": [
        "ORDER"
      ]
    },
    {
      "id": "line item",
      "shape": {
        "kind": "table",
        "attributes": []
      },
      "label": [
        "line item"
      ]
    },
    {
      "id": "PRODUCT",
      "shape": {
        "kind": "table",
        "attributes": []
      },
      "label": [
        "PRODUCT"
      ]
    },
    {
      "id": "PROFILE",
      "shape": {
        "kind": "table",
        "attributes": []
      },
      "label": [
        "PROFILE"
      ]
    },
    {
      "id": "ACCOUNT",
      "shape": {
        "kind": "table",
        "attributes": []
      },
      "label": [
        "ACCOUNT"
      ]
    }
  ],
  "edges": [
    {
      "from": "CUSTOMER",
      "to": "ORDER",
      "label": [
        "places"
      ],
      "stroke": "solid",
      "tail": "exactly_one",
      "head": "zero_or_more",
      "min_length": 1
    },
    {
      "from": "ORDER",
      "to": "line item",
      "label": [
        "contains"
      ],
      "stroke": "solid",
      "tail": "exactly_one",
      "head": "one_or_more",
      "min_length": 1
    },
    {
      "from": "line item",
      "to": "PRODUCT",
      "label": [
        "refers to"
      ],
      "stroke": "dotted",
      "tail": "zero_or_more",
      "head": "exactly_one",
      "min_length": 1
    },
    {
      "from": "CUSTOMER",
      "to": "PROFILE",
      "label": [
        "has"
      ],
      "stroke": "solid",
      "tail": "zero_or_one",
      "head": "zero_or_one",
      "min_length": 1
    },
    {
      "from": "ACCOUNT",
      "to": "CUSTOMER",
      "label": [
        "owns"
      ],
      "stroke": "solid",
      "tail": "one_or_more",
      "head": "exactly_one",
      "min_length": 1
    }
  ]
}
