crates/op-diagram-mermaid/tests/snapshots/parse__diagrams@er__blocks.mmd.snap
---
source: crates/op-diagram-mermaid/tests/parse.rs
expression: diagram
input_file: crates/op-diagram-mermaid/tests/diagrams/er/blocks.mmd
---
{
  "kind": "graph",
  "direction": "down",
  "nodes": [
    {
      "id": "A",
      "shape": {
        "kind": "table",
        "attributes": [
          {
            "data_type": "int",
            "name": "one"
          },
          {
            "data_type": "int",
            "name": "two"
          }
        ]
      },
      "label": [
        "A"
      ]
    },
    {
      "id": "B",
      "shape": {
        "kind": "table",
        "attributes": []
      },
      "label": [
        "B"
      ]
    },
    {
      "id": "C",
      "shape": {
        "kind": "table",
        "attributes": [
          {
            "data_type": "int",
            "name": "three"
          }
        ]
      },
      "label": [
        "C"
      ]
    },
    {
      "id": "D",
      "shape": {
        "kind": "table",
        "attributes": []
      },
      "label": [
        "D"
      ]
    }
  ],
  "edges": [
    {
      "from": "A",
      "to": "B",
      "label": [
        "is"
      ],
      "stroke": "solid",
      "tail": "exactly_one",
      "head": "exactly_one",
      "min_length": 1
    }
  ]
}
